@@ -1,14 +1,16 @@
-# $NetBSD: Makefile,v 1.3 2018/07/28 14:40:52 brook Exp $
+# $NetBSD: Makefile,v 1.4 2019/08/01 00:59:05 brook Exp $
 
-CATEGORIES=	textproc
+CATEGORIES=	textproc R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/yaml/
 COMMENT=	Methods to convert R data to YAML and back
-LICENSE=	modified-bsd
+LICENSE=	modified-bsd AND mit
 
 R_PKGNAME=	yaml
-R_PKGVER=	2.1.14
+R_PKGVER=	2.2.0
+
+USE_LANGUAGES=	c
 
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
